--- a/src/public/css/components/_input.scss
+++ b/src/public/css/components/_input.scss
@@ -10,13 +10,11 @@
 }
 
 .search-input-container::after {
+  @include svg-icon(1.0625rem, 1.0625rem, "../img/search.svg");
+  
   position: absolute;
   top: 50%;
   right: 10px;
-  width: 1.0625rem;
-  height: 1.0625rem;
-  background-image: url("../img/search.svg");
-  background-size: 100% 100%;
   transform: translateY(-50%);
   content: "";
 }
