--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -39,6 +39,7 @@ $gradient-color-end: #fda4cf;
 $standard-border-radius: 10px;
 $primary-border-color: #f1d7e6;
 $light-outline-color: #e3e1e3;
+$border-width: 0.0313rem;
 
 // Shadows
 $main-shadow: 0 2px 10px 0 rgb(142 118 157 / 22%);
@@ -67,6 +68,9 @@ $spacing: 1.5rem;
 
 // Navbar
 $navbar-height: 4.375rem;
+$navbar-padding: 0.375rem;
+$navbar-dropdown-width: 15rem;
+
 
 // Buttons
 $button-height: 3.125rem;
