--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -12,11 +12,11 @@
 
   position: relative;
   z-index: 0;
-  gap: $button-gap;
+  gap: $content-padding;
   padding: $button-padding-y $button-padding-x;
   overflow: hidden;
   text-align: center;
-  border: none;
+  border: 0;
   border-radius: $button-border-radius;
 
   &::before {
@@ -55,7 +55,7 @@
   border: 1px solid $light-outline-color;
 
   img {
-    margin-right: $button-gap;
+    margin-right: $content-padding;
   }
 
   &:hover {
