--- a/src/public/css/components/_script.scss
+++ b/src/public/css/components/_script.scss
@@ -2,17 +2,17 @@
 .script-content {
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(0deg, $primary-background-color 0%, $primary-background-color 100%),
     linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%);
-  box-sizing: border-box;
-  height: 100%;
-  width: 100%;
 }
 
 .script-header {
   @extend %header;
 
-  border-bottom: 0.0313rem $primary-border-color solid;
+  border-bottom: $border-width $primary-border-color solid;
 }
 
 .editor {
@@ -25,9 +25,9 @@
 .line-numbers {
     @include font-style($family: $script-font);
     @include flex-direction;
-  
-    min-width: 5ch;
+
     align-items: flex-end;
+    min-width: 5ch;
     padding: 0 0.4375rem;
     overflow: hidden;
     color: #c2a6c5;
