move table-script close to where its used

--- a/src/views/history.ejs
+++ b/src/views/history.ejs
@@ -3,5 +3,5 @@
     currentPage: 'history', 
     currentUsername: 'John Doe',
     body: ["partials/history/history-content.ejs", "partials/history/table-logs.ejs", "partials/history/script-modal.ejs"],
-    scripts: "<script src='js/utilities/table-script.js'></script><script src='js/history-script.js'></script>"
+    scripts: "<script src='js/history-script.js'></script>"
 }) %>
