move admin to layout and scripts to appropriate files

--- a/src/views/partials/admin/user-application.ejs
+++ b/src/views/partials/admin/user-application.ejs
@@ -9,3 +9,5 @@
     <img id="user-id-image" src="" /><!-- set image in js -->
     <button class="unblur-button">Show ID Photo</button>
 </div>
+
+<script type="module" src="js/admin/user-application.js"></script>
