--- a/src/views/partials/admin/user-management.ejs
+++ b/src/views/partials/admin/user-management.ejs
@@ -30,3 +30,6 @@
     <% }) %>
   </tbody>
 </table>
+
+<script src="js/admin/user-management.js"></script>
+<script src="js/utilities/table-script.js"></script>
