--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -1,32 +1,7 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <title>Admin</title>
-  <link rel="stylesheet" href="css/main.css" />
-</head>
-
-<body>
-  <%- include('partials/navbar.ejs', {page: 'admin' , username: 'John Doe' }); %>
-
-  <div class="main-content">
-    <div class="tabs">
-      <div class="tab" id="tab-user-application" data-tab="user">User Applications (<%= userRequests.length %>)</div>
-      <div class="tab" id="tab-package-request" data-tab="package">Package Requests (<%= packageRequests.length %>)</div>
-      <div class="tab" id="tab-user-management">User Management</div>
-    </div>
-    <div class="tab-content">
-      <%- include('partials/admin/tab-user-applications.ejs'); %>
-      <%- include('partials/admin/tab-package-requests.ejs'); %>
-      <%- include('partials/admin/tab-user-management.ejs'); %>
-    </div>
-  </div>
-
-  <script src="js/admin-script.js"></script>
-  <script type="module" src="js/admin/user-application.js"></script>
-  <script type="module" src="js/admin/package-request.js"></script>
-  <script src="js/admin/user-management.js"></script>
-  <script src="js/utilities/table-script.js"></script>
-</body>
-
-</html>
+<%- include('layout.ejs', { 
+  title: 'Admin', 
+  currentPage: 'admin', 
+  currentUsername: 'John Doe',
+  body: ["partials/admin/admin-content.ejs"],
+  scripts: "<script src='js/admin-script.js'></script>"
+}) %>
