--- a/src/views/partials/admin/package-request.ejs
+++ b/src/views/partials/admin/package-request.ejs
@@ -15,3 +15,5 @@
 <div class="spacing"></div>
 <div class="smaller-header">User explanation</div>
 <p id="package-application-message"><!-- set application mesage in js --></p>
+
+<script type="module" src="js/admin/package-request.js"></script>
