--- a/src/public/css/pages/_login.scss
+++ b/src/public/css/pages/_login.scss
@@ -28,16 +28,13 @@
     @include flex-center;
 
     flex-direction: column;
-    width: 25rem;
+    width: 30.5rem;
     margin: auto;
     text-align: center;
   }
 }
 
-.toggle-container,
-.input,
-#sign-in-btn,
-.google-sign-in-btn {
+.toggle-container {
   @include flex-center;
 
   width: 100%;
@@ -81,46 +78,4 @@
   @include font-style($weight: 300, $size: 3rem);
 
   margin-bottom: 1.25rem;
-}
-
-.input {
-  flex-direction: row;
-  height: 3.75rem;
-  box-shadow: $main-shadow;
-
-  &-before {
-    padding: 0 $content-padding;
-  }
-
-  &-after {
-    width: 100%;
-    height: 100%;
-    padding-right: 0.938rem;
-    text-align: left;
-  }
-}
-
-.or-google-divider {
-  width: 100%;
-  margin-top: 1.875rem;
-  padding: 0;
-  overflow: visible;
-  text-align: center;
-  border: 0;
-  border-top: 1px solid $light-outline-color;
-
-  &::after {
-    position: relative;
-    top: -$content-padding;
-    display: inline-block;
-    padding: 0 1rem;
-    color: $secondary-font-color;
-    background: $background-color;
-    content: "Or";
-  }
-}
-
-#login-input-email,
-#login-input-password {
-  height: 100%;
 }
