--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -70,6 +70,7 @@ $navbar-height: 4.375rem;
 
 // Buttons
 $button-height: 3.125rem;
+$button-height-thin: 2.25rem;
 $button-padding-y: 0.5625rem;
 $button-padding-x: 1.1875rem;
 $button-gap: 0.625rem;
