--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://accounts.google.com/gsi/client" async></script>
 </head>
+
 <body>
     <div class="login-page-wrapper">
         <div
@@ -15,14 +17,98 @@
                 <div class="left-container">
                     <img class="login-logo" src="img/full_logo.svg">
                     <div class="register-title-text">Let's get you started!</div>
-                  
+                    <div class="register-account-info">
+                        <div class="current-account">You are currently making an account for <span class="register-google-name"><%= token.name %></span></div>
+                        <div class="not-you">Not you? <a class="change-account-link" href="/login">Register with a different account</a></div>
+                    </div>
+                    <div id="step-01-button" class="step-button large-button-thin">Step 01</div>
+                    <div id="step-01-content" class="step-content">
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-first-name" type="email" placeholder="First name" />
+                            </div>
+                        </div>
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-last-name" type="email" placeholder="Last name" />
+                            </div>
+                        </div>
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-email" type="email" placeholder="Email" />
+                            </div>
+                        </div>
+                    </div>
+                    <div id="step-02-button" class="step-button large-button-thin">Step 02</div>
+                    <div id="step-02-content" class="step-content display-none">
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-first-name" type="email" placeholder="First name" />
+                            </div>
+                        </div>
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-last-name" type="email" placeholder="Last name" />
+                            </div>
+                        </div>
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-email" type="email" placeholder="Email" />
+                            </div>
+                        </div>
+                    </div>
+                    <div id="step-03-button" class="step-button large-button-thin">Step 03</div>
+                    <div id="step-03-content" class="step-content display-none">
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-first-name" type="email" placeholder="First name" />
+                            </div>
+                        </div>
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-last-name" type="email" placeholder="Last name" />
+                            </div>
+                        </div>
+                        <div class="input">
+                            <div class="input-before">
+                                <i class="bi-at" style="font-size: 1.5rem;"></i>
+                            </div>
+                            <div class="input-after">
+                                <input id="register-input-email" type="email" placeholder="Email" />
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="half-container fill"><img src="img/eye_candy.png"></div>
         </div>
     </div>
 </body>
+
 </html>
 
 <script src="js/register-script.js"></script>
-
