change layout to accept other classes other than main-content if needed

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -9,7 +9,7 @@
 <body>
     <%- include('partials/navbar.ejs', { page: currentPage , username: currentUsername }); %>
 
-    <div class="main-content">
+    <div class="<%= locals.mainClass ? mainClass : 'main-content' %>">
         <% body.forEach(function(bodyPart) { %>
             <%- include(bodyPart) %>
         <% }) %>
