--- a/src/public/css/components/_script.scss
+++ b/src/public/css/components/_script.scss
@@ -9,8 +9,8 @@
     linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%);
 }
 
-.script-header {
-  @extend %header;
+.script-header-container {
+  @include header-container;
 
   border-bottom: $border-width $primary-border-color solid;
 }
