--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -2,8 +2,8 @@
 @import "https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap";
 
 // Import partials
-@import "partials/mixin";
 @import "partials/variables";
+@import "partials/mixin";
 
 // Import components
 @import "components/navbar";
@@ -22,6 +22,12 @@
 @import "pages/admin";
 
 // This file should contain all global CSS
+
+%main-content{
+  height: calc(100vh - #{$navbar-height} - #{$content-padding});
+  min-height: 0;
+  margin: 0 $content-padding;
+}
 
 body {
   @include font-style(bold);
