--- a/src/public/css/partials/_mixin.scss
+++ b/src/public/css/partials/_mixin.scss
@@ -57,10 +57,8 @@
 
 @mixin content-container {
   @include flex-direction($direction: column);
+  @extend %main-content;
 
-  height: calc(100% - #{$navbar-height} - #{$content-padding});
-  min-height: 0;
-  margin: 0 $content-padding;
   background: linear-gradient(180deg, $primary-background-color 0%, rgba($primary-background-color, 0.8) 100%),
     $primary-background-color;
 }
@@ -68,7 +66,7 @@
 @mixin header-container {
   @include flex-center($justify: space-between);
 
-  padding: $content-padding 0;
+  padding: $content-padding;
 }
 
 @mixin content-overflow {
