--- a/src/views/partials/history/script-modal.ejs
+++ b/src/views/partials/history/script-modal.ejs
@@ -1,8 +1,8 @@
 <div id="modal" style="display:none;">
     <div id="modal-content" class="editor">
         <div class="script-content">
-            <div id="modal-header" class="script-header">
-                <span id="modal-title"></span>
+            <div id="modal-header" class="script-header-container">
+                <span id="modal-title" class="main-header"></span>
                 <button id="close-modal" class="close-button">Close</button>
             </div>
             <div class="editor">
