--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -94,3 +94,8 @@ $input-width: 15.25rem;
 
 // Modal
 $modal-background-color: rgb(0 0 0 / 40%);
+
+// Images
+$search-img: "../img/search.svg";
+$date-from-img: "../img/date_from.svg";
+$date-to-img: "../img/date_to.svg";
