--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -78,28 +78,7 @@
                     <div id="step-03-button" class="step-button large-button-thin">Step 03</div>
                     <div id="step-03-content" class="step-content display-none">
                         <div class="input">
-                            <div class="input-before">
-                                <i class="bi-at" style="font-size: 1.5rem;"></i>
-                            </div>
-                            <div class="input-after">
-                                <input id="register-input-first-name" type="email" placeholder="First name" />
-                            </div>
-                        </div>
-                        <div class="input">
-                            <div class="input-before">
-                                <i class="bi-at" style="font-size: 1.5rem;"></i>
-                            </div>
-                            <div class="input-after">
-                                <input id="register-input-last-name" type="email" placeholder="Last name" />
-                            </div>
-                        </div>
-                        <div class="input">
-                            <div class="input-before">
-                                <i class="bi-at" style="font-size: 1.5rem;"></i>
-                            </div>
-                            <div class="input-after">
-                                <input id="register-input-email" type="email" placeholder="Email" />
-                            </div>
+                            <textarea id="register-input-reason" rows="4" cols="50"></textarea>
                         </div>
                     </div>
                 </div>
