favicon for layout

--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -4,6 +4,7 @@
 <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="/img/logo.svg" type="image/svg+xml" />
 </head>
 
 <body>
