--- a/src/views/partials/history/table-logs.ejs
+++ b/src/views/partials/history/table-logs.ejs
@@ -1,26 +1,12 @@
-<!-- creates a date in the format of YYYY/MM/DD - hh:mm AM/PM -->
-<% const formatDate=(date)=> {
-    if (!date) return 'N/A';
+<% const sortedLogs = [...logs].sort((a, b) => b.create_time.getTime() - a.create_time.getTime()); %>
 
-    const options = { year: 'numeric', month: '2-digit', day: '2-digit' };
-    const dateString = new Date(date).toISOString().split('T')[0].replace(/-/g, '/');
-
-    const hour = date.getHours();
-    const minute = date.getMinutes();
-    const ampm = hour >= 12 ? 'PM' : 'AM';
-    const formattedHour = hour % 12 === 0 ? 12 : hour % 12;
-    const timeString = `${formattedHour}:${minute.toString().padStart(2, '0')} ${ampm}`;
-
-    return `${dateString} - ${timeString}`;
-    }; %>
-    
 <table id="history-table" class="table">
 <tbody class="table-body">
     <tr class="table-header">
         <th><a href="#" class="light-text">Date</a></th>
         <th><a href="#" class="light-text">Ran by</a></th>
     </tr>
-    <% logs.forEach(log=> { %>
+    <% sortedLogs.forEach(log=> { %>
         <tr class="table-row" data-text="<%= log.text %>">
             <td class="table-cell light-text" data-timestamp="<%= log.create_time.getTime() %>">
                 <%= formatDate(log.create_time) %>
