--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -64,6 +64,10 @@ p {
   font-size: $paragraph-font-size;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .spacing {
   margin-bottom: $spacing;
 }
