seperate modal logic from history and home script

--- a/src/views/partials/modals/script-modal.ejs
+++ b/src/views/partials/modals/script-modal.ejs
@@ -12,3 +12,6 @@
         </div>
     </div>
 </div>
+
+<script src="js/utilities/modals-utils.js"></script>
+<script src="js/modals/script-modal.js"></script>
