fix navbar link

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <div id="navbar">
   <div class="navbar-item-group-left">
-    <a href="home.html" class="<%= page === 'home' ? 'active' : '' %>">
+    <a href="home" class="<%= page === 'home' ? 'active' : '' %>">
       <div class="navbar-logo"></div>
     </a>
     <a class="navbar-link <%= page === 'home' ? 'active' : '' %>" href="home">Home</a>
