move things in home for consistency's sake

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -2,6 +2,6 @@
   title: 'Home', 
   currentPage: 'home', 
   currentUsername: 'John Doe',
-  body: ["partials/home/home-content.ejs", "partials/modals/script-modal.ejs"],
+  body: ["partials/home/home-content.ejs","partials/home/table-logs.ejs", "partials/modals/script-modal.ejs"],
   scripts: "<script src='js/home-script.js'></script>"
 }) %>
