guest page init

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('layout.ejs', { 
   title: 'Home', 
   currentPage: 'home', 
-  currentUsername: 'John Doe',
-  body: ["partials/home/home-content.ejs","partials/home/table-logs.ejs", "partials/modals/script-modal.ejs"],
+  currentUsername: 'John Doe', 
+  body: ["partials/home/home-content.ejs","partials/home/table-logs.ejs", "partials/modals/script-modal.ejs"], //["partials/home/guest-home-content.ejs"]
   scripts: "<script src='js/home-script.js'></script>"
 }) %>
