add error msg and validation for register fields

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -85,7 +85,8 @@
                             <textarea id="register-input-reason" rows="4" cols="50"></textarea>
                         </div>
                     </div>
-                    <div class="submit-button large-button-thin cursor-pointer">Submit</div>
+                    <div id="submit-button" class="large-button-thin cursor-pointer">Submit</div>
+                    <div id="register-error-msg" class="error-msg display-none">Please answer all fields.</div>
                 </div>
             </div>
             <div class="half-container fill"><img src="img/eye_candy.png"></div>
