--- a/src/public/css/pages/_register.scss
+++ b/src/public/css/pages/_register.scss
@@ -49,7 +49,7 @@ a.change-account-link:hover {
 }
 
 .step-button,
-.submit-button {
+#submit-button {
     @include flex-center;
     width: 100%;
     border-radius: $standard-border-radius;
@@ -71,7 +71,7 @@ a.change-account-link:hover {
     resize: none;
     width: 100%;
     border-radius: $standard-border-radius;
-    padding: $content-padding;
+    padding: 1rem;
     height: 10rem;
 }
 
@@ -86,12 +86,16 @@ a.change-account-link:hover {
     margin-top: $content-padding;
 }
 
-.submit-button {
+#submit-button {
     padding: $content-padding 0;
     background: linear-gradient(45deg, $gradient-color-start 0.01%, $gradient-color-mid 49.97%, $gradient-color-end 100%);
-
+    margin-bottom: $content-padding;
+     
     &:hover {
         background: $gradient-color-start;
-        ;
     }
+}
+
+.error-msg {
+    color: $button-decline-color;
 }
