only accept images in register file upload

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -71,7 +71,7 @@
                             <label id="file-upload-label" for="file-upload" class="upload-button">
                                 Select image
                             </label>
-                            <input type="file" name="file-upload" id="file-upload" class="display-none">
+                            <input type="file" name="file-upload" id="file-upload" class="display-none" accept="image/png, image/jpeg">
                             <div id="file-name" class="display-none"></div>
                         </div>
                     </div>
