add package request button in analyze page

--- a/src/views/analyze.ejs
+++ b/src/views/analyze.ejs
@@ -2,7 +2,7 @@
   title: 'Analyze', 
   currentPage: 'analyze', 
   currentUsername: 'John Doe',
-  body: ["partials/analyze/analyze-content.ejs"],
+  body: ["partials/analyze/analyze-content.ejs", "partials/modals/package-request-modal.ejs"],
   scripts: "<script src='js/analyze-script.js'></script>",
   mainClass: "script-wrapper"
 }) %>
