--- a/src/views/partials/analyze/analyze-content.ejs
+++ b/src/views/partials/analyze/analyze-content.ejs
@@ -1,6 +1,7 @@
 <div class="script-content">
     <div class="script-header-container">
         <div class="main-header"> R Script </div>
+        <button id="request-package-button" class="primary-button">Request additional packages</button>
         <button id="run-script-button" class="primary-button">Run Script</button>
     </div>
     <div class="editor">
