--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -2,6 +2,7 @@
   title: 'Home', 
   currentPage: 'home', 
   currentUsername: 'John Doe', 
-  body: ["partials/home/home-content.ejs","partials/home/table-logs.ejs", "partials/modals/script-modal.ejs"], //["partials/home/guest-home-content.ejs"]
-  scripts: "<script src='js/home-script.js'></script>"
+  body: ["partials/home/home-content.ejs", "partials/modals/script-modal.ejs"],
+  scripts: "<script src='js/home-script.js'></script>",
+  mainClass: "main-content-image"
 }) %>
