--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -16,6 +16,7 @@
   padding: $button-padding-y $button-padding-x;
   overflow: hidden;
   text-align: center;
+  text-decoration: none;
   border: 0;
   border-radius: $button-border-radius;
 
