--- a/src/views/partials/history/history-content.ejs
+++ b/src/views/partials/history/history-content.ejs
@@ -3,11 +3,11 @@
     <div class="search-inputs">
         <div class="date-from-input-container">
             <input type="text" class="search-input" id="history-date-from-search"
-                placeholder="Date from (YYYY/MM/DD)" pattern="\d{4}/\d{2}/\d{2}">
+                placeholder="Search from date (YYYY/MM/DD)" pattern="\d{4}/\d{2}/\d{2}">
         </div>
         <div class="date-to-input-container">
             <input type="text" class="search-input" id="history-date-to-search"
-                placeholder="Date to (YYYY/MM/DD)" pattern="\d{4}/\d{2}/\d{2}">
+                placeholder="Search to date (YYYY/MM/DD)" pattern="\d{4}/\d{2}/\d{2}">
         </div>
         <div class="search-input-container">
             <input type="text" class="search-input" id="history-search-from" placeholder="Search from">
