--- a/src/views/partials/home/home-content.ejs
+++ b/src/views/partials/home/home-content.ejs
@@ -10,11 +10,11 @@
     <div class="main-header-container">
         <div class="search-inputs">
             <div class="date-from-input-container">
-                <input type="text" class="search-input" id="home-date-from-search" placeholder="Date from (YYYY/MM/DD)"
+                <input type="text" class="search-input" id="home-date-from-search" placeholder="Search from date (YYYY/MM/DD)"
                     pattern="\d{4}/\d{2}/\d{2}" />
             </div>
             <div class="date-to-input-container">
-                <input type="text" class="search-input" id="home-date-to-search" placeholder="Date to (YYYY/MM/DD)"
+                <input type="text" class="search-input" id="home-date-to-search" placeholder="Search to date (YYYY/MM/DD)"
                     pattern="\d{4}/\d{2}/\d{2}" />
             </div>
         </div>
