--- a/src/views/partials/home/home-content.ejs
+++ b/src/views/partials/home/home-content.ejs
@@ -4,7 +4,7 @@
 
 <div class="centered-content">
     <div class="main-header-container">
-        <div class="main-header">Your scripts (<%= logs.length %>)</div>
+        <div class="main-header">Your scripts</div>
         <a class="primary-button" href="/Analyze">Run new script</a>
     </div>
     <div class="main-header-container">
