--- a/src/views/partials/modals/script-modal.ejs
+++ b/src/views/partials/modals/script-modal.ejs
@@ -3,12 +3,11 @@
         <div class="script-content">
             <div id="modal-header" class="script-header-container">
                 <span id="modal-title" class="main-header"></span>
+                <button id="download-html-button" class="primary-button">Download .HTML</button>
+                <button id="download-script-button" class="primary-button">Download script</button>
                 <button id="close-modal" class="close-button">Close</button>
             </div>
-            <div class="editor">
-                <div class="line-numbers"></div>
-                <textarea class="script-textbox" spellcheck="false" readonly></textarea>
-            </div>
+            <div id="results" class="editor"><iframe id="results-iframe"></iframe></div>
         </div>
     </div>
 </div>
