--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -8,6 +8,7 @@
 // Import components
 @import "components/navbar";
 @import "components/buttons";
+@import "components/dropdown";
 @import "components/input";
 @import "components/modal";
 @import "components/script";
