--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -99,3 +99,17 @@ $modal-background-color: rgb(0 0 0 / 40%);
 $search-img: "../img/search.svg";
 $date-from-img: "../img/date_from.svg";
 $date-to-img: "../img/date_to.svg";
+
+$approve-img: "../img/check_circle.svg";
+$cancel-img: "../img/cancel.svg";
+$visibility-img: "../img/visibility.svg";
+
+$navbar-logo-img: "../img/navbar_logo.svg";
+$person-img: "../img/person.svg";
+$logout-img: "../img/logout.svg";
+
+$arrow-dropdown-img: "../img/arrow_drop_down.svg";
+$arrow-dropdown-alt-img: "../img/arrow_drop_down_purple.svg";
+$arrow-right-img: "../img/arrow_right_alt.svg";
+
+$link-open-img: "../img/open_in_new.svg";
