--- a/src/public/css/components/_navbar.scss
+++ b/src/public/css/components/_navbar.scss
@@ -78,18 +78,18 @@
   }
 
   .navbar-logo {
-    @include svg-icon(2.2rem, 1.5rem, '../img/navbar_logo.svg');
+    @include svg-icon(2.2rem, 1.5rem, $navbar-logo-img);
   }
   
   .navbar-user-icon {
-    @include svg-icon(1.25rem, 1.25rem, '../img/person.svg');
+    @include svg-icon(1.25rem, 1.25rem, $person-img);
   }
   
   .down-arrow-icon {
-    @include svg-icon(0.75rem, 1.25rem, '../img/arrow_drop_down.svg');
+    @include svg-icon(0.75rem, 1.25rem, $arrow-dropdown-img);
   }
   
   .logout-icon {
-    @include svg-icon(1rem, 1rem, '../img/logout.svg');
+    @include svg-icon(1rem, 1rem, $logout-img);
   }
 }
