--- a/src/public/css/components/_tabs.scss
+++ b/src/public/css/components/_tabs.scss
@@ -58,7 +58,7 @@
     right: 1.25rem;
     width: 1.5rem;
     height: 1.5rem;
-    background: url("../img/arrow_right_alt.svg") no-repeat center;
+    background: url($arrow-right-img) no-repeat center;
     background-size: contain;
     transform: translateY(-50%);
     content: "";
