--- a/src/public/css/components/_text.scss
+++ b/src/public/css/components/_text.scss
@@ -59,7 +59,7 @@
   @extend %link;
 
   &::after {
-    @include svg-icon(1.1875rem, 1.1875rem, "../img/open_in_new.svg");
+    @include svg-icon(1.1875rem, 1.1875rem, $link-open-img);
 
     display: inline-block;
     margin-bottom: 0.15rem;
