normalize border-radius variable

--- a/src/public/css/components/_navbar.scss
+++ b/src/public/css/components/_navbar.scss
@@ -59,7 +59,7 @@
     margin-top: -$content-padding;
     background-color: $background-color;
     border: $border-width $primary-border-color solid;
-    border-radius: $input-border-radius;
+    border-radius: $border-radius;
     box-shadow: $main-shadow;
 
     a {
