--- a/src/public/css/pages/_admin.scss
+++ b/src/public/css/pages/_admin.scss
@@ -40,7 +40,7 @@
   padding: $content-outline-padding;
   background: $background-color;
   border: 2px solid transparent;
-  border-radius: 0.75rem;
+  border-radius: $border-radius;
 }
 
 .action-buttons {
@@ -59,7 +59,7 @@
   text-align: center;
   background-color: $primary-background-color;
   border: 2px solid $background-color;
-  border-radius: 0.75rem;
+  border-radius: $border-radius;
 }
 
 // Image
@@ -71,7 +71,7 @@
   height: 25rem;
   padding-top: 2.5rem;
   overflow: hidden;
-  border-radius: 0.75rem;
+  border-radius: $border-radius;
 }
 
 #user-id-image {
