--- a/src/public/css/components/_input.scss
+++ b/src/public/css/components/_input.scss
@@ -24,5 +24,5 @@
   padding: 0.75rem 0.875rem;
   color: $secondary-font-color;
   letter-spacing: $input-letter-spacing;
-  border-radius: $input-border-radius;
+  border-radius: $border-radius;
 }
