--- a/src/public/css/components/_script.scss
+++ b/src/public/css/components/_script.scss
@@ -5,8 +5,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  background: linear-gradient(0deg, $primary-background-color 0%, $primary-background-color 100%),
-    linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%);
+  background: $background-gradient;
 }
 
 .script-header-container {
@@ -30,7 +29,7 @@
     min-width: 5ch;
     padding: 0 0.4375rem;
     overflow: hidden;
-    color: #c2a6c5;
+    color: $number-color;
     line-height: 1.5;
     white-space: pre;
     text-align: right;
@@ -49,7 +48,7 @@
   padding-top: 0;
   padding-left: 1.875rem;
   line-height: 1.5;
-  background: linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%), $primary-background-color;
+  background: $background-gradient;
   border: 0;
   resize: none;
   scroll-behavior: smooth;
