--- a/src/public/css/components/_tabs.scss
+++ b/src/public/css/components/_tabs.scss
@@ -45,7 +45,7 @@
   &.active, 
   input[type="checkbox"]:checked ~ &  {
     background-color: $background-color;
-    box-shadow: 0 4px 10px 0 rgb(169 82 113 / 12%);
+    box-shadow: $tab-shadow;
   }
 
   &:hover {
