--- a/src/public/css/pages/_analyze.scss
+++ b/src/public/css/pages/_analyze.scss
@@ -19,6 +19,6 @@
   
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, $primary-background-color 0%, rgb(254 221 225 / 80%) 100%), $primary-background-color;
+  background: $background-gradient;
   border: transparent;
 }
