--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -13,6 +13,7 @@ $main-font-color: #130214;
 $primary-font-color: #926296;
 $secondary-font-color: #7e6d80;
 $button-font-color: #fff;
+$number-color: #c2a6c5;
 
 // Font properties
 $standard-font-weight: 600;
@@ -29,6 +30,8 @@ $header-large-size: 2rem;
 // Background colors
 $background-color: #fff;
 $primary-background-color: #fce5f1;
+$background-gradient: linear-gradient(180deg, $primary-background-color 0%, rgba($primary-background-color, 0.8) 100%),
+$primary-background-color;
 
 // Gradient colors
 $gradient-color-start: #b287ae;
@@ -44,6 +47,7 @@ $border-radius: 0.75rem;
 // Shadows
 $main-shadow: 0 2px 10px 0 rgb(142 118 157 / 22%);
 $btn-shadow: 0 6px 16px 0 rgb(251 164 206 / 30%);
+$tab-shadow: 0 4px 10px 0 rgb(169 82 113 / 12%);
 
 // Hover
 $hover-color: #f5bdd8;
