--- a/src/views/partials/admin/user-management.ejs
+++ b/src/views/partials/admin/user-management.ejs
@@ -1,4 +1,4 @@
-<table id="user-table" class="table">
+<table id="user-table" class="table-four-columns">
   <tbody class="table-body">
     <tr class="table-header">
       <th><a href="#" class="light-text">Name</a></th>
