--- a/src/views/partials/history/table-logs.ejs
+++ b/src/views/partials/history/table-logs.ejs
@@ -1,6 +1,6 @@
 <% const sortedLogs = [...logs].sort((a, b) => b.create_time.getTime() - a.create_time.getTime()); %>
 
-<table id="history-table" class="table">
+<table id="history-table" class="table-four-columns">
 <tbody class="table-body">
     <tr class="table-header">
         <th><a href="#" class="light-text">Date</a></th>
