--- a/src/public/css/partials/_variables.scss
+++ b/src/public/css/partials/_variables.scss
@@ -61,7 +61,7 @@ $tab-gap: 0.25rem;
 $tab-height: 3rem;
 $tab-content-padding: 1.25rem;
 $tab-border: 2px;
-$tab-grid-template-columns: 1fr 1fr 1fr 1fr; // add more if a table with more than four columns is necessary
+$tab-grid-template-columns: 1fr 1fr 1fr 1fr; 
 
 // Content
 $content-padding: 0.625rem;
@@ -101,17 +101,13 @@ $modal-background-color: rgb(0 0 0 / 40%);
 $search-img: "../img/search.svg";
 $date-from-img: "../img/date_from.svg";
 $date-to-img: "../img/date_to.svg";
-
 $approve-img: "../img/check_circle.svg";
 $cancel-img: "../img/cancel.svg";
 $visibility-img: "../img/visibility.svg";
-
 $navbar-logo-img: "../img/navbar_logo.svg";
 $person-img: "../img/person.svg";
 $logout-img: "../img/logout.svg";
-
 $arrow-dropdown-img: "../img/arrow_drop_down.svg";
 $arrow-dropdown-alt-img: "../img/arrow_drop_down_purple.svg";
 $arrow-right-img: "../img/arrow_right_alt.svg";
-
 $link-open-img: "../img/open_in_new.svg";
