--- a/src/public/css/pages/_admin.scss
+++ b/src/public/css/pages/_admin.scss
@@ -10,7 +10,7 @@
     @include flex-direction;
 
     align-items: flex-start;
-    margin-left: 1.25rem;
+    margin-left: $content-outline-padding;
   }
 }
 
@@ -45,7 +45,7 @@
 
 .action-buttons {
   display: flex;
-  gap: 10px;
+  gap: $content-padding;
 }
 
 .no-content-selected {
@@ -55,7 +55,7 @@
   flex: 3.5;
   min-height: 0;
   margin: 0 $content-padding $content-padding $content-padding;
-  padding: 20px;
+  padding: $content-outline-padding;
   text-align: center;
   background-color: $primary-background-color;
   border: 2px solid $background-color;
