rename dropdown-content in the navbar

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
     <div class="navbar-user-icon"></div>
     <%= username ? username : 'Guest' %>
     <div class="down-arrow-icon"></div>
-    <div class="dropdown-content">
+    <div class="navbar-dropdown-content">
       <a href="/logout">
         <div class="logout-icon"></div> Logout
       </a>
