--- a/src/public/css/components/_navbar.scss
+++ b/src/public/css/components/_navbar.scss
@@ -49,7 +49,7 @@
     }
   }
 
-  .dropdown-content {
+  .navbar-dropdown-content {
     position: absolute;
     top: 100%;
     right: 0;
@@ -73,7 +73,7 @@
     }
   }
 
-  .navbar-item-group-right:hover .dropdown-content {
+  .navbar-item-group-right:hover .navbar-dropdown-content {
     display: block;
   }
 
