--- a/src/public/css/pages/_login.scss
+++ b/src/public/css/pages/_login.scss
@@ -6,6 +6,13 @@
   overflow: hidden;
 }
 
+.full-container {
+  @include flex-center;
+  justify-content: center;
+  width: 100%; 
+  height: 100%; 
+}
+
 .half-container {
   box-sizing: border-box;
   width: 50%;
