--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,8 +10,7 @@
 </head>
 <body>
     <div class="login-page-wrapper">
-        <div
-            style="display: flex; width: 100%; height: 100%; flex-direction: row; align-items: center; justify-content: center;">
+        <div class="full-container">
             <div class="half-container">
                 <div class="left-container">
                     <img class="login-logo" src="img/full_logo.svg">
