--- a/src/public/css/pages/_register.scss
+++ b/src/public/css/pages/_register.scss
@@ -11,16 +11,11 @@
     border-radius: $standard-border-radius;
     flex-direction: row;
     box-shadow: $main-shadow;
+}
 
-    &-before {
-        padding: 1rem;
-    }
-
-    &-after {
-        width: 100%;
-        padding-right: 0.938rem;
-        text-align: left;
-    }
+.input > input {
+    border-radius: $standard-border-radius;
+    padding: 1.25rem;
 }
 
 .register-google-name {
@@ -82,7 +77,7 @@ a.change-account-link:hover {
 }
 
 .content-more-info {
-    @include font-style($weight: 100, $size: 0.80rem);
+    @include font-style($weight: 100, $size: 0.95rem);
     margin-top: $content-padding;
 }
 
