--- a/src/views/partials/auth/register-content.ejs
+++ b/src/views/partials/auth/register-content.ejs
@@ -17,30 +17,15 @@
 <div id="step-01-content" class="step-content">
     <div class="content-more-info">Your full name will be used to identify you on the website.</div>
     <div class="input">
-        <div class="input-before">
-            <i class="bi-at" style="font-size: 1.5rem;"></i>
-        </div>
-        <div class="input-after">
-            <input id="register-input-first-name" type="email" placeholder="First name" />
-        </div>
+        <input id="register-input-first-name" type="text" placeholder="First name" />
     </div>
     <div class="input">
-        <div class="input-before">
-            <i class="bi-at" style="font-size: 1.5rem;"></i>
-        </div>
-        <div class="input-after">
-            <input id="register-input-last-name" type="email" placeholder="Last name" />
-        </div>
+        <input id="register-input-last-name" type="text" placeholder="Last name" />
     </div>
-    <div class="content-more-info">Please use your academic email address for verification purposes.
+    <div class="content-more-info">Please use your <b>academic email address</b> for verification purposes.
     </div>
     <div class="input">
-        <div class="input-before">
-            <i class="bi-at" style="font-size: 1.5rem;"></i>
-        </div>
-        <div class="input-after">
-            <input id="register-input-email" type="email" placeholder="Email" />
-        </div>
+        <input id="register-input-email" type="email" placeholder="Email" />
     </div>
 </div>
 <div id="step-02-button" class="step-button large-button-thin cursor-pointer">
