--- a/src/views/partials/auth/register-content.ejs
+++ b/src/views/partials/auth/register-content.ejs
@@ -51,5 +51,9 @@
         <textarea id="register-input-reason" rows="4" cols="50"></textarea>
     </div>
 </div>
+<div class="checkbox-confirmation-div">
+    <input id="checkbox-confirmation" name="checkbox-confirmation" type="checkbox">
+    <label for="checkbox-confirmation">I agree not to engage in any activities that may cause harm, disrupt, or compromise the security and integrity of the website or its users' data.</label>
+</div>
 <div id="submit-button" class="large-button-thin cursor-pointer">Submit</div>
 <div id="register-error-msg" class="error-msg display-none">Please answer all fields.</div>
