display user role in user management

--- a/src/views/partials/admin/user-management.ejs
+++ b/src/views/partials/admin/user-management.ejs
@@ -24,7 +24,7 @@
           <% } %>
         </td>
         <td class="table-cell light-text">
-          <%= user.id_role === 0 ? 'Admin' : 'User' %>
+          <%= user.role.name_role %>
         </td>
       </tr>
     <% }) %>
