rename 'close-modal' button to 'close-modal-button'

--- a/src/views/partials/modals/package-request-modal.ejs
+++ b/src/views/partials/modals/package-request-modal.ejs
@@ -4,7 +4,7 @@
             <div id="modal-header" class="script-header-container">
                 <span id="modal-title" class="main-header">Package request form</span>
                 <button id="send-request-button" class="primary-button">Request package</button>
-                <button id="close-modal" class="close-button">Close</button>
+                <button id="close-modal-button" class="close-button">Close</button>
             </div>
             <div class="editor">
                 <textarea class="script-textbox" spellcheck="false" placeholder="Type your package request here..."></textarea>
