--- a/src/views/partials/modals/script-modal.ejs
+++ b/src/views/partials/modals/script-modal.ejs
@@ -5,7 +5,7 @@
                 <span id="modal-title" class="main-header"></span>
                 <button id="download-html-button" class="primary-button">Download .HTML</button>
                 <button id="download-script-button" class="primary-button">Download script</button>
-                <button id="close-modal" class="close-button">Close</button>
+                <button id="close-modal-button" class="close-button">Close</button>
             </div>
             <div id="results" class="editor"><iframe id="results-iframe"></iframe></div>
         </div>
