user-modal init

--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -2,6 +2,6 @@
   title: 'Admin', 
   currentPage: 'admin', 
   currentUsername: 'John Doe',
-  body: ["partials/admin/admin-content.ejs"],
+  body: ["partials/admin/admin-content.ejs", "partials/modals/user-modal.ejs"],
   scripts: "<script src='js/admin-script.js'></script>"
 }) %>
