--- a/src/views/partials/auth/register-content.ejs
+++ b/src/views/partials/auth/register-content.ejs
@@ -16,15 +16,15 @@
 </div>
 <div id="step-01-content" class="step-content">
     <div class="content-more-info">Your full name will be used to identify you on the website.</div>
-    <div class="input">
+    <div class="input-container">
         <input id="register-input-first-name" type="text" placeholder="First name" />
     </div>
-    <div class="input">
+    <div class="input-container">
         <input id="register-input-last-name" type="text" placeholder="Last name" />
     </div>
     <div class="content-more-info">Please use your <b>academic email address</b> for verification purposes.
     </div>
-    <div class="input">
+    <div class="input-container">
         <input id="register-input-email" type="email" placeholder="Email" />
     </div>
 </div>
@@ -33,7 +33,7 @@
 </div>
 <div id="step-02-content" class="step-content display-none">
     <div class="content-more-info">Your ID will be used to verify your identity.</div>
-    <div class="input file-dropbox">
+    <div class="input-container file-dropbox">
         <label id="file-upload-label" for="file-upload" class="upload-button">
             Select image
         </label>
@@ -47,7 +47,7 @@
 <div id="step-03-content" class="step-content display-none">
     <div class="content-more-info">Please provide a brief explanation of why you'd like access to
         the website.</div>
-    <div class="input">
+    <div class="input-container">
         <textarea id="register-input-reason" rows="4" cols="50"></textarea>
     </div>
 </div>
