--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -14,11 +14,9 @@
     <%= username ? username : 'Guest' %>
     <div class="down-arrow-icon"></div>
     <div class="navbar-dropdown-content">
-      <a>
-        <div id="log-out-button">
-          <div class="logout-icon"></div>
-          <span>Log out</span>
-        </div>
+      <a id="log-out-button">
+        <div class="logout-icon"></div>
+        <span>Log out</span>
       </a>
     </div>
   </div>
