--- a/src/public/css/components/_buttons.scss
+++ b/src/public/css/components/_buttons.scss
@@ -65,7 +65,7 @@
   padding: $button-padding-x;
   color: $primary-font-color;
   border: 2px solid $gradient-color-mid;
-  border-radius: $standard-border-radius;
+  border-radius: $border-radius;
   cursor: pointer;
   &:hover {
     color: $gradient-color-start;
