--- a/src/public/css/components/_input.scss
+++ b/src/public/css/components/_input.scss
@@ -26,3 +26,19 @@
   letter-spacing: $input-letter-spacing;
   border-radius: $border-radius;
 }
+
+.input-container {
+  @include flex-center;
+
+  width: 100%;
+  margin-top: $content-padding;
+  border-radius: $border-radius;
+  flex-direction: row;
+  box-shadow: $main-shadow;
+
+  input {
+      font-weight: 100;
+      border-radius: $border-radius;
+      padding: 1.25rem;
+  }
+}
