add cursor pointer to all btns, add hover effect to links
remove unused classes in _login.scss

--- a/src/views/partials/auth/register-content.ejs
+++ b/src/views/partials/auth/register-content.ejs
@@ -1,4 +1,3 @@
-<img class="login-logo" src="img/full_logo.svg">
 <div class="register-title-text">Let's get you started!</div>
 <div class="register-account-info">
     <div class="current-account">You are currently making an account for <span class="register-google-name">
@@ -11,7 +10,7 @@
         </a>
     </div>
 </div>
-<div id="step-01-button" class="step-button large-button-thin cursor-pointer">
+<div id="step-01-button" class="step-button large-button-thin">
     Step 01 - Full name and email
 </div>
 <div id="step-01-content" class="step-content">
@@ -28,7 +27,7 @@
         <input id="register-input-email" type="email" placeholder="Email" />
     </div>
 </div>
-<div id="step-02-button" class="step-button large-button-thin cursor-pointer">
+<div id="step-02-button" class="step-button large-button-thin">
     Step 02 - ID upload for verification
 </div>
 <div id="step-02-content" class="step-content display-none">
@@ -41,7 +40,7 @@
         <div id="file-name" class="display-none"></div>
     </div>
 </div>
-<div id="step-03-button" class="step-button large-button-thin cursor-pointer">
+<div id="step-03-button" class="step-button large-button-thin">
     Step 03 - Reason for account creation
 </div>
 <div id="step-03-content" class="step-content display-none">
@@ -55,5 +54,5 @@
     <input id="checkbox-confirmation" name="checkbox-confirmation" type="checkbox">
     <label for="checkbox-confirmation">I agree not to engage in any activities that may cause harm, disrupt, or compromise the security and integrity of the website or its users' data.</label>
 </div>
-<div id="submit-button" class="large-button-thin cursor-pointer">Submit</div>
+<div id="submit-button" class="large-button-thin">Submit</div>
 <div id="register-error-msg" class="error-msg display-none">Please answer all fields.</div>
