display connected user's first and last name in navbar

--- a/src/views/partials/home/home-content.ejs
+++ b/src/views/partials/home/home-content.ejs
@@ -1,4 +1,4 @@
-<div class="larger-header">Welcome Back, <%= currentUsername %>
+<div class="larger-header">Welcome Back, <%= currentUser %>
 </div>
 
 
