extract absolute positioning from unblur-button

--- a/src/views/partials/admin/user-application.ejs
+++ b/src/views/partials/admin/user-application.ejs
@@ -7,7 +7,7 @@
 <p id="user-application-message"><!-- set application mesage in js --></p>
 <div class="image-container">
     <img id="user-id-image" src="" /><!-- set image in js -->
-    <button class="unblur-button">Show ID Photo</button>
+    <button class="unblur-button centered">Show ID Photo</button>
 </div>
 
 <script type="module" src="js/admin/user-application.js"></script>
