--- a/src/public/css/main.scss
+++ b/src/public/css/main.scss
@@ -73,6 +73,13 @@ p {
   display: none !important;
 }
 
+.centered{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .flex-container {
   display: flex;
   gap: 1rem;
